Bug 806192 - Fail instead of segfaulting when not passed nsIContent. r=bz

--HG--
extra : rebase_source : 3edeb8d83a81baeaa35afbfdaaae3041a33db575